--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,15 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   http: ^1.2.0
+  flutter_bloc: ^8.1.4
+  bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   mocktail: ^1.0.3
+  bloc_test: ^9.1.6
 
 flutter:
   uses-material-design: true
